Complete version with CREATE, REMOVE AND REPLACE patched tested

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <title>My own react</title>
   </head>
   <body>
+    <h2>Hello World</h2>
     <div id="app">
-      <input type="text" id="input-text">
-      <button onclick="handleClick()">Add Note</button>
     </div>
     <script src="./components.js"></script>
     <script src="./react.js"></script>
