--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   </head>
   <body>
     <h2>Hello World</h2>
-    <div id="app">
+    <div>
+       <div id="app"> 
+       
+       </div>
     </div>
     <script src="./components.js"></script>
     <script src="./react.js"></script>
